--- a/src/DocIngest.ServiceDefaults/DocIngest.ServiceDefaults.csproj
+++ b/src/DocIngest.ServiceDefaults/DocIngest.ServiceDefaults.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.15.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.15.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.15.0" />
+
+    <ProjectReference Include="..\DocIngest.Core\DocIngest.Core.csproj" />
   </ItemGroup>
 
 </Project>
