--- a/src/DocIngest.Core/DocIngest.Core.csproj
+++ b/src/DocIngest.Core/DocIngest.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="DocX" Version="5.0.0" />
     <PackageReference Include="itext7" Version="9.5.0" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="10.2.0" />
