--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,6 @@ jobs:
 
       - name: Build
         run: dotnet build src/DocIngest.slnx --configuration Release --no-restore
+
+      - name: Test
+        run: dotnet test src/DocIngest.slnx --configuration Release --no-build
