--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install fonts
+        run: sudo apt-get update && sudo apt-get install -y ttf-mscorefonts-installer
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
