--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install fonts
-        run: sudo apt-get update && sudo apt-get install -y ttf-mscorefonts-installer
+        run: sudo apt-get update && sudo apt-get install -y fonts-liberation
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
