--- a/src/DocIngest.Core/DocIngest.Core.csproj
+++ b/src/DocIngest.Core/DocIngest.Core.csproj
@@ -17,7 +17,6 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.27.0" />
     <PackageReference Include="DocX" Version="5.0.0" />
-    <PackageReference Include="itext7" Version="9.5.0" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="10.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.2" />
@@ -25,6 +24,7 @@
     <PackageReference Include="PDFsharp" Version="6.2.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
+    <PackageReference Include="PdfPig" Version="0.1.7" />
   </ItemGroup>
 
 </Project>
