--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+
     steps:
       - uses: actions/checkout@v4
 
@@ -28,5 +31,10 @@ jobs:
       - name: Pack NuGet
         run: dotnet pack src/DocIngest.Core/DocIngest.Core.csproj --configuration Release --output ./nupkg --no-build /p:Version=$VERSION
 
+      - name: NuGet login (OIDC - temp API key)
+        uses: NuGet/login@v1
+        with:
+          user: durmisi
+
       - name: Publish NuGet
-        run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json
