--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,9 @@ jobs:
 
       - name: NuGet login (OIDC - temp API key)
         uses: NuGet/login@v1
+        id: login
         with:
           user: durmisi
 
       - name: Publish NuGet
-        run: dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
